--- a/vignettes/dataRetrieval.Rmd
+++ b/vignettes/dataRetrieval.Rmd
@@ -17,8 +17,8 @@ vignette: >
 library(knitr)
 library(dataRetrieval)
 
-options(continue=" ")
-options(width=60)
+options(continue = " ")
+options(width = 60)
 knitr::opts_chunk$set(echo = TRUE,
                       warning = FALSE,
                       message = FALSE,
@@ -40,13 +40,13 @@ ChoptankInfo <- readNWISsite(siteNumber)
 parameterCd <- "00060"
 
 #Raw daily data:
-rawDailyData <- readNWISdv(siteNumber,parameterCd,
-                      "1980-01-01","2010-01-01")
+rawDailyData <- readNWISdv(siteNumber, parameterCd,
+                           "1980-01-01", "2010-01-01")
 
 # Sample data Nitrate:
 parameterCd <- "00618"
-qwData <- readNWISqw(siteNumber,parameterCd,
-                      "1980-01-01","2010-01-01")
+qwData <- readNWISqw(siteNumber, parameterCd,
+                      "1980-01-01", "2010-01-01")
 
 pCode <- readNWISpCode(parameterCd)
 
@@ -87,7 +87,7 @@ Arguments <- c("service, tz='UTC', ...", #readNWISdata
                "", #readNWISpeak
                "tz='UTC'", #readNWISgwl
                "stateCd, countyCd, years='ALL', categories='ALL'", #readNWISuse
-               "statReportType='daily', statType='mean'",#readNWISstat
+               "statReportType='daily', statType='mean'", #readNWISstat
                "", #readNWISpCode
                "", #readNWISsite
                "...", #whatNWISsites
@@ -120,10 +120,10 @@ Description <- c("Data using user-specified queries", #readNWISdata
 Source <- c(rep("NWIS", 14), rep("WQP", 7))
 Site <- c("opt.", rep("req.", 7), "", 
           rep("req.", 4), "opt.", "opt.", "req.", rep("opt.", 5))
-parameterCd <- c("opt.", rep("req.",3),
+parameterCd <- c("opt.", rep("req.", 3),
                  rep("", 5), "req.", "req.",
-                 rep("",2), rep("opt.",2), "req.", rep("", 5))
-start <- c("opt.", rep("req.",3),"",
+                 rep("", 2), rep("opt.", 2), "req.", rep("", 5))
+start <- c("opt.", rep("req.", 3), "",
            rep("req.", 3), "", "req.", rep("", 5), "req.", rep("opt.", 5))
 
 data.df <- data.frame(Name = Functions,
@@ -132,10 +132,10 @@ data.df <- data.frame(Name = Functions,
                       parameterCd = parameterCd, 
                       `startDate \n endDate` = start,
                       Arguments,
-                      Source, stringsAsFactors=FALSE)
+                      Source, stringsAsFactors = FALSE)
 
 kable(data.df, 
-      caption="Table 1: dataRetrieval functions")
+      caption = "Table 1: dataRetrieval functions")
 
 ```
 
@@ -154,13 +154,17 @@ Not every station will measure all parameters. A short list of commonly measured
 ```{r tableParameterCodes, echo=FALSE}
 
 
-pCode <- c('00060', '00065', '00010','00045','00400')
-shortName <- c("Discharge [ft<sup>3</sup>/s]","Gage height [ft]","Temperature [C]", "Precipitation [in]", "pH")
+pCode <- c("00060", "00065", "00010", "00045", "00400")
+shortName <- c("Discharge [ft<sup>3</sup>/s]", 
+               "Gage height [ft]",
+               "Temperature [C]",
+               "Precipitation [in]",
+               "pH")
 
-data.df <- data.frame(pCode, shortName, stringsAsFactors=FALSE)
+data.df <- data.frame(pCode, shortName, stringsAsFactors = FALSE)
 
 kable(data.df, 
-          caption="Table 2: Common USGS Parameter Codes")
+          caption = "Table 2: Common USGS Parameter Codes")
 
 
 ```
@@ -174,16 +178,13 @@ For unit values data (sensor data measured at regular time intervals such as 15 
 Some common codes are shown in Table 3.
 
 ```{r tableStatCodes, echo=FALSE}
-StatCode <- c('00001', '00002', '00003','00008')
-shortName <- c("Maximum","Minimum","Mean", "Median")
+StatCode <- c("00001", "00002", "00003", "00008")
+shortName <- c("Maximum", "Minimum", "Mean", "Median")
 
-data.df <- data.frame(StatCode, shortName, stringsAsFactors=FALSE)
+data.df <- data.frame(StatCode, shortName, stringsAsFactors = FALSE)
 
 kable(data.df, 
-          caption="Table 3: Commonly used USGS Stat Codes")
-
-
-
+          caption = "Table 3: Commonly used USGS Stat Codes")
 ```
 
 Examples for using these site numbers, parameter codes, and statistic codes will be presented in subsequent sections.
@@ -199,7 +200,7 @@ Use the `readNWISsite` function to obtain all of the information available for a
 
 
 ```{r getSite, echo=TRUE, eval=FALSE}
-siteNumbers <- c("01491000","01645000") 
+siteNumbers <- c("01491000", "01645000") 
 siteINFO <- readNWISsite(siteNumbers)
 ```
 
@@ -224,31 +225,45 @@ In the following example, we limit the retrieved data to only daily data. The de
 # Continuing from the previous example:
 # This pulls out just the daily, mean data:
 
-dailyDataAvailable <- whatNWISdata(siteNumber=siteNumbers,
-                    service="dv", statCd="00003")
-
-
+dailyDataAvailable <- whatNWISdata(siteNumber = siteNumbers,
+                                   service = "dv",
+                                   statCd = "00003")
 ```
 
 ```{r echo=FALSE}
 
 tableData <- data.frame(
-  siteNumbers = c("01491000","01491000","01645000","01491000","01491000","01491000"),
-  srsname = c("Temperature, water","Stream flow, mean daily",
+  siteNumbers = c("01491000",
+                  "01491000",
+                  "01645000",
+                  "01491000",
+                  "01491000",
+                  "01491000"),
+  srsname = c("Temperature, water",
+              "Stream flow, mean daily",
               "Stream flow, mean daily",
               "Specific conductance",
               "Suspended sediment concentration (SSC)",
-              "Suspended sediment discharge" ),
-  startDate = c("2010-10-01","1948-01-01","1930-09-26","2010-10-01","1980-10-01","1980-10-01"),
-  endDate = c("2012-05-09","2017-05-17","2017-05-17","2012-05-09","1991-09-30","1991-09-30"),
-  count = c("529","25340","31646","527","4017","4017"),
-  units = c("deg C","ft<sup>3</sup>/s","ft<sup>3</sup>/s","uS/cm @25C","mg/l","tons/day"),
+              "Suspended sediment discharge"),
+  startDate = c("2010-10-01",
+                "1948-01-01",
+                "1930-09-26",
+                "2010-10-01",
+                "1980-10-01",
+                "1980-10-01"),
+  endDate = c("2012-05-09",
+              "2017-05-17",
+              "2017-05-17",
+              "2012-05-09",
+              "1991-09-30",
+              "1991-09-30"),
+  count = c("529", "25340", "31646", "527", "4017", "4017"),
+  units = c("deg C", "ft<sup>3</sup>/s", "ft<sup>3</sup>/s", "uS/cm @25C", "mg/l", "tons/day"),
   stringsAsFactors = FALSE)
 
 
 kable(tableData, 
-          caption="Table 4: Reformatted version of output from the whatNWISdata function for the Choptank River near Greensboro, MD, and from Seneca Creek at Dawsonville, MD from the daily values service [Some columns deleted for space considerations]")
-
+          caption = "Table 4: Reformatted version of output from the whatNWISdata function for the Choptank River near Greensboro, MD, and from Seneca Creek at Dawsonville, MD from the daily values service [Some columns deleted for space considerations]")
 ```
 
 See [Creating Tables](#creating-tables-in-microsoft-software-from-r) for instructions on converting an R data frame to a table in Microsoft&#174; software Excel or Word to display a data availability table similar to Table 4. Excel, Microsoft, PowerPoint, Windows, and Word are registered trademarks of Microsoft Corporation in the United States and other countries.
@@ -278,8 +293,7 @@ parameterCd <- "00060"  # Discharge
 startDate <- "2009-10-01"  
 endDate <- "2012-09-30" 
 
-discharge <- readNWISdv(siteNumber, 
-                    parameterCd, startDate, endDate)
+discharge <- readNWISdv(siteNumber, parameterCd, startDate, endDate)
 ```
 
 The column "datetime" in the returned data frame is automatically imported as a variable of class "Date" in R. Each requested parameter has a value and remark code column.  The names of these columns depend on the requested parameter and stat code combinations. USGS daily value qualification codes are often "A" (approved for publication) or "P" (provisional data subject to revision). 
@@ -288,18 +302,18 @@ Another example would be a request for mean and maximum daily temperature and di
 
 ```{r label=getNWIStemperature, echo=TRUE, eval=FALSE}
 siteNumber <- "01491000"
-parameterCd <- c("00010","00060")  # Temperature and discharge
-statCd <- c("00001","00003")  # Mean and maximum
+parameterCd <- c("00010", "00060")  # Temperature and discharge
+statCd <- c("00001", "00003")  # Mean and maximum
 startDate <- "2012-01-01"
 endDate <- "2012-05-01"
 
 temperatureAndFlow <- readNWISdv(siteNumber, parameterCd, 
-        startDate, endDate, statCd=statCd)
+        startDate, endDate, statCd = statCd)
 
 ```
 
 ```{r label=getNWIStemperature2, echo=FALSE, eval=TRUE}
-filePath <- system.file("extdata", package="dataRetrieval")
+filePath <- system.file("extdata", package = "dataRetrieval")
 fileName <- "temperatureAndFlow.RData"
 fullPath <- file.path(filePath, fileName)
 load(fullPath)
@@ -335,19 +349,24 @@ An example of plotting the above data:
 variableInfo <- attr(temperatureAndFlow, "variableInfo")
 siteInfo <- attr(temperatureAndFlow, "siteInfo")
 
-par(mar=c(5,5,5,5)) #sets the size of the plot window
+par(mar = c(5, 5, 5, 5)) #sets the size of the plot window
 
 plot(temperatureAndFlow$Date, temperatureAndFlow$Wtemp_Max,
-  ylab=variableInfo$parameter_desc[1],xlab="" )
-par(new=TRUE)
-plot(temperatureAndFlow$Date, temperatureAndFlow$Flow,
-  col="red",type="l",xaxt="n",yaxt="n",xlab="",ylab="",axes=FALSE
-  )
-axis(4,col="red",col.axis="red")
-mtext(variableInfo$parameter_desc[2],side=4,line=3,col="red")
-title(paste(siteInfo$station_nm,"2012"))
+     ylab = variableInfo$parameter_desc[1],
+     xlab = "")
+par(new = TRUE)
+plot(temperatureAndFlow$Date,
+     temperatureAndFlow$Flow,
+     col = "red", type = "l",
+     xaxt = "n", yaxt = "n",
+     xlab = "", ylab = "",
+     axes = FALSE)
+axis(4, col = "red", col.axis = "red")
+mtext(variableInfo$parameter_desc[2], side = 4, line = 3, col = "red")
+title(paste(siteInfo$station_nm, "2012"))
 legend("topleft", variableInfo$param_units, 
-       col=c("black","red"),lty=c(NA,1),pch=c(1,NA))
+       col = c("black", "red"), lty = c(NA, 1),
+       pch = c(1, NA))
 ```
 
 
@@ -360,8 +379,7 @@ Any data collected at regular time intervals (such as 15-minute or hourly) are k
 parameterCd <- "00060"  # Discharge
 startDate <- "2012-05-12" 
 endDate <- "2012-05-13" 
-dischargeUnit <- readNWISuv(siteNumber, parameterCd, 
-        startDate, endDate)
+dischargeUnit <- readNWISuv(siteNumber, parameterCd, startDate, endDate)
 dischargeUnit <- renameNWISColumns(dischargeUnit)
 ```
 
@@ -384,36 +402,6 @@ America/Metlakatla
 
 Data are retrieved from [https://waterservices.usgs.gov/rest/IV-Test-Tool.html](https://waterservices.usgs.gov/rest/IV-Test-Tool.html). There are occasions where NWIS values are not reported as numbers, instead a common example is "Ice".  Any value that cannot be converted to a number will be reported as NA in this package. Site information and measured parameter information is attached to the data frame as attributes. This is discussed further in [metadata](#embedded-metadata) section.
 
-
-## Water Quality Data
-
-To get USGS water quality data from water samples collected at the streamgage or other monitoring site (as distinct from unit values collected through some type of automatic monitor) we can use the function `readNWISqw`, with the input arguments: `siteNumber`, `parameterCd`, `startDate`, and `endDate`. Additionally, the argument `expanded` is a logical input that allows the user to choose between a simple return of datetimes/qualifier/values (`expanded=FALSE`), or a more complete and verbose output (`expanded=TRUE`). `expanded = TRUE` includes such columns as remark codes, value qualifying text, and detection level for each parameter code. There also includes an argument "reshape", that converts the expanded dataset to a "wide" format (each requested parameter code gets individual columns). The defaults are `expanded=TRUE`, and `reshape=FALSE`. 
-
-```{r label=getQW, echo=TRUE, eval=FALSE}
- 
-# Dissolved Nitrate parameter codes:
-parameterCd <- c("00618","71851")
-startDate <- "1985-10-01"
-endDate <- "2012-09-30"
-
-dfLong <- readNWISqw(siteNumber, parameterCd, 
-      startDate, endDate)
-
-# Or the wide return:
-dfWide <- readNWISqw(siteNumber, parameterCd,
-      startDate, endDate, reshape=TRUE)
-
-```
-
-Site information and measured parameter information is attached to the data frame as attributes. This is discussed further in the [metadata](#embedded-metadata) section. Additional metadata, such as information about the column names can be found by using the `comment` function, also described in the [metadata](#embedded-metadata) section.
-
-```{r qwmeta, echo=TRUE, eval=FALSE}
-
-comment(dfLong)
-
-```
-
-
 ## Groundwater Level Data
 
 Groundwater level measurements can be obtained with the `readNWISgwl` function. Information on the returned data can be found with the `comment` function, and attached attributes as described in the [metadata](#embedded-metadata) section.
@@ -429,7 +417,7 @@ groundWater <- readNWISgwl(siteNumber)
 Peak flow data are instantaneous discharge or stage data that record the maximum values of these variables during a flood event.  They include the annual peak flood event but can also include records of other peaks that are lower than the annual maximum. Peak discharge measurements can be obtained with the `readNWISpeak` function. Information on the returned data can be found with the `comment` function and attached attributes as described in the [metadata](#embedded-metadata) section.
 
 ```{r peakexample, echo=TRUE, eval=FALSE}
-siteNumber <- '01594440'
+siteNumber <- "01594440"
 peakData <- readNWISpeak(siteNumber)
 
 ```
@@ -478,22 +466,21 @@ national <- readNWISuse(stateCd = NULL,
 Retrieves site statistics from the USGS Statistics Web Service beta.  
 
 ```{r eval=FALSE}
-discharge_stats <- readNWISstat(siteNumbers=c("02319394"),
-                   parameterCd=c("00060"),
-                   statReportType="annual") 
-
+discharge_stats <- readNWISstat(siteNumbers = c("02319394"),
+                                parameterCd = c("00060"),
+                                statReportType = "annual") 
 ```
 
 
 # Water Quality Portal Web Retrievals
 
-There are additional water quality data sets available from the [Water Quality Data Portal](https://www.waterqualitydata.us/).  These data sets can be housed in either the STORET database (data from EPA), NWIS database (data from USGS), STEWARDS database (data from USDA), and additional databases are slated to be included in the future.  Because only USGS uses parameter codes, a "characteristic name" must be supplied.  The `readWQPqw` function can take either a USGS parameter code, or a more general characteristic name in the parameterCd input argument. The Water Quality Data Portal includes data discovery tools and information on characteristic names. The following example retrieves specific conductance from a DNR site in Wisconsin. 
+Water quality data sets available from the [Water Quality Data Portal](https://www.waterqualitydata.us/).  These data sets can be housed in either the STORET database (data from EPA), NWIS database (data from USGS), STEWARDS database (data from USDA), and additional databases are slated to be included in the future.  Because only USGS uses parameter codes, a "characteristic name" must be supplied.  The `readWQPqw` function can take either a USGS parameter code, or a more general characteristic name in the parameterCd input argument. The Water Quality Data Portal includes data discovery tools and information on characteristic names. The following example retrieves specific conductance from a DNR site in Wisconsin. 
 
 
 ```{r label=getQWData, echo=TRUE, eval=FALSE}
-specificCond <- readWQPqw('WIDNR_WQX-10032762',
-                          'Specific conductance',
-                          '2011-05-01','2011-09-30')
+specificCond <- readWQPqw("WIDNR_WQX-10032762",
+                          "Specific conductance",
+                          "2011-05-01", "2011-09-30")
 ```
 
 
@@ -512,9 +499,9 @@ The function `whatNWISsites` can be used to discover NWIS sites based on any que
 The following `dataRetrieval` code can be used to get those sites:
 
 ```{r siteSearch, eval=FALSE}
-sites <- whatNWISsites(bBox=c(-83.0,36.5,-81.0,38.5), 
-                      parameterCd=c("00010","00060"),
-                      hasDataTypeCd="dv")
+sites <- whatNWISsites(bBox = c(-83.0, 36.5, -81.0, 38.5), 
+                      parameterCd = c("00010", "00060"),
+                      hasDataTypeCd = "dv")
 ```
 
 ### Data: readNWISdata
@@ -523,8 +510,8 @@ For NWIS data, the function `readNWISdata` can be used. The argument listed in t
 
 ```{r echo=FALSE}
 
-Service <- c("dv","iv","gwlevels","qwdata","measurements","peak","stat")
-Description <- c("Daily","Instantaneous","Groundwater Levels","Water Quality","Surface Water Measurements","Peak Flow","Statistics Service")
+Service <- c("dv", "iv", "gwlevels", "qwdata", "measurements", "peak", "stat")
+Description <- c("Daily", "Instantaneous", "Groundwater Levels", "Water Quality", "Surface Water Measurements", "Peak Flow", "Statistics Service")
 URL <- c("<a href='https://waterservices.usgs.gov/rest/DV-Test-Tool.html' target='_blank'>https://waterservices.usgs.gov/rest/DV-Test-Tool.html<a>",
          "<a href='https://waterservices.usgs.gov/rest/IV-Test-Tool.html' target='_blank'>https://waterservices.usgs.gov/rest/IV-Test-Tool.html<a>",
          "<a href='https://waterservices.usgs.gov/rest/GW-Levels-Test-Tool.html' target='_blank'>https://waterservices.usgs.gov/rest/GW-Levels-Test-Tool.html<a>",
@@ -540,7 +527,7 @@ tableData <- data.frame(Service,
 
 
 kable(tableData, 
-          caption="Table 5: NWIS general data calls")
+          caption = "Table 5: NWIS general data calls")
 
 ```
 
@@ -548,11 +535,11 @@ kable(tableData,
 The `...` argument allows the user to create their own queries based on the instructions found in the web links above. The links provide instructions on how to create a URL to request data. Perhaps you want sites only in Wisconsin, with a drainage area less than 50 mi<sup>2</sup>, and the most recent daily discharge data. That request would be done as follows:
 
 ```{r dataExample, eval=FALSE}
-dischargeWI <- readNWISdata(service="dv",
-                           stateCd="WI",
-                           parameterCd="00060",
-                           drainAreaMin="50",
-                           statCd="00003")
+dischargeWI <- readNWISdata(service = "dv",
+                           stateCd = "WI",
+                           parameterCd = "00060",
+                           drainAreaMin = "50",
+                           statCd = "00003")
 
 siteInfo <- attr(dischargeWI, "siteInfo")
 
@@ -569,8 +556,8 @@ To discover available sites in the WQP in New Jersey that have measured Chloride
 
 ```{r NJChloride, eval=FALSE}
 
-sitesNJ <- whatWQPsites(statecode="US:34",
-                       characteristicName="Chloride")
+sitesNJ <- whatWQPsites(statecode = "US:34",
+                       characteristicName = "Chloride")
 
 ```
 
@@ -580,8 +567,8 @@ sitesNJ <- whatWQPsites(statecode="US:34",
 To get data from the WQP using generalized Web service calls, use the function `readWQPdata`. For example, to get all the pH data in Wisconsin:
 
 ```{r phData, eval=FALSE}
-dataPH <- readWQPdata(statecode="US:55", 
-                 characteristicName="pH")
+dataPH <- readWQPdata(statecode = "US:55", 
+                 characteristicName = "pH")
 ```
 
 
@@ -591,7 +578,7 @@ The function `whatWQPdata` returns a data frame with information on the amount o
 
 ```{r eval=FALSE}
 type <- "Stream"
-sites <- whatWQPdata(countycode="US:55:025",siteType=type)
+sites <- whatWQPdata(countycode = "US:55:025", siteType = type)
 ```
 
 This returns a data frame with all of the sites that were measured in streams in Dane County, WI. Also, in that table, there is a measure of `activityCount` (how often the site was sampled), and `resultCount` (how many individual results are available).
@@ -601,7 +588,7 @@ This returns a data frame with all of the sites that were measured in streams in
 The function `whatWQPsamples` returns information on the individual samples collected at a site. For example:
 
 ```{r eval=FALSE}
-site <- whatWQPsamples(siteid="USGS-01594440")
+site <- whatWQPsamples(siteid = "USGS-01594440")
 ```
 
 This returns one row for each instance that a sample was collect.
@@ -612,7 +599,7 @@ The function `whatWQPmetrics` provides metric information. This is only currentl
 
 ```{r eval=FALSE}
 type <- "Stream"
-sites <- whatWQPmetrics(countycode="US:55:025",siteType=type)
+sites <- whatWQPmetrics(countycode = "US:55:025", siteType = type)
 ```
 
 
@@ -627,15 +614,12 @@ attr(dischargeWI, "url")
 attr(dischargeWI, "queryTime")
 
 siteInfo <- attr(dischargeWI, "siteInfo")
-
 ```
 
 Depending on the format that the data was obtained (RDB, WaterML1, etc), there will be additional information embedded in the data frame as attributes. To discover the available attributes:
 
 ```{r meta2, eval=FALSE}
-
 names(attributes(dischargeWI))
-
 ```
 
 For data obtained from `readNWISuv`, `readNWISdv`, `readNWISgwl` there are two attributes that are particularly useful: `siteInfo` and `variableInfo`.
@@ -645,8 +629,6 @@ For data obtained from `readNWISuv`, `readNWISdv`, `readNWISgwl` there are two a
 siteInfo <- attr(dischargeWI, "siteInfo")
 
 variableInfo <- attr(dischargeWI, "variableInfo")
-
-
 ```
 
 Data obtained from `readNWISpeak`, `readNWISmeas`, and `readNWISrating`, the `comment` attribute is useful.
