--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -67,7 +67,6 @@ df <- data.frame(Type = c("Unit", "Daily", "Discrete"),
                                "water quality (qw), groundwater (gwlevel), rating curves (rating), peak flow (peak), surfacewater (meas)"))
 
 knitr::kable(df)
-
 ```
 
 
@@ -92,8 +91,8 @@ Here are some examples of a few codes:
 ```{r echo=FALSE, eval=TRUE}
 library(knitr)
 
-df <- data.frame(pCode = c("00060","00065","00010","00400"),
-                 shName = c("Discharge","Gage Height","Temperature","pH"))
+df <- data.frame(pCode = c("00060", "00065", "00010", "00400"),
+                 shName = c("Discharge", "Gage Height", "Temperature", "pH"))
 
 names(df) <- c("Parameter Codes", "Short Name")
 
@@ -106,8 +105,8 @@ knitr::kable(df)
 <div style="float: right; width: 50%;">
 
 ```{r echo=FALSE, eval=TRUE}
-df <- data.frame(pCode = c("00001","00002","00003","00008"),
-                 shName = c("Maximum","Minimum","Mean","Median"))
+df <- data.frame(pCode = c("00001", "00002", "00003", "00008"),
+                 shName = c("Maximum", "Minimum", "Mean", "Median"))
 
 names(df) <- c("Statistic Codes", "Short Name")
 
@@ -123,19 +122,18 @@ pcode <- readNWISpCode("all")
 
 phosCds <- pcode[grep("phosphorus",
                       pcode$parameter_nm,
-                      ignore.case=TRUE),]
+                      ignore.case = TRUE), ]
 
 names(phosCds)
 unique(phosCds$parameter_units)
-
 ```
 
 Explore the wide variety of parameters that contain "phosphorus" in the parameter_nm:
 
 ```{r echo=FALSE, eval=TRUE}
 library(DT)
-datatable(phosCds[,c("parameter_cd", "parameter_nm", "parameter_units")],
-          rownames = FALSE,options = list(pageLength = 4))
+datatable(phosCds[, c("parameter_cd", "parameter_nm", "parameter_units")],
+          rownames = FALSE, options = list(pageLength = 4))
 ```
 
 ### User-friendly retrievals: NWIS
@@ -150,9 +148,8 @@ Sometimes, you know exactly what you want. If you know:
 You can use the "user-friendly" functions. These functions take the same 4 inputs (sites, parameter codes, start date, end date), and deliver data from different NWIS services:
 
 ```{r echo=FALSE, eval=TRUE}
-
-df <- data.frame(functionName = c("readNWISuv", "readNWISdv",                              "readNWISgwl", "readNWISmeas","readNWISpeak", 
-                    "readNWISqw","readNWISrating","readNWISuse",
+df <- data.frame(functionName = c("readNWISuv", "readNWISdv",                              "readNWISgwl", "readNWISmeas", "readNWISpeak", 
+                    "readNWISqw", "readNWISrating", "readNWISuse",
                     "readNWISstat"),
                  service = c("Unit", "Daily", "Groundwater Level",
                              "Surface-water", "Peak Flow", 
@@ -163,7 +160,6 @@ df <- data.frame(functionName = c("readNWISuv", "readNWISdv",                   
 names(df) <- c("Function Name", "Data")
 
 knitr::kable(df)
-
 ```
 
 Let's start by asking for discharge (parameter code = 00060) at a site right next to the USGS office in Wisconsin (Pheasant Branch Creek). 
@@ -178,7 +174,6 @@ pheasant <- readNWISuv(siteNumbers = siteNo,
                      parameterCd = pCode,
                      startDate = start.date,
                      endDate = end.date)
-
 ```
 
 From the Pheasant Creek example, let's look at the data. The column names are:
@@ -252,7 +247,6 @@ There are several ways to specify the requests. The best way to discover how fle
 
 ```{r echo=FALSE}
 knitr::include_graphics("waterservices.png")
-
 ```
 
 Available geographic filters are individual site(s), a single state, a bounding box, or a HUC (hydrologic unit code). See examples for those services by looking at the help page for the `readNWISdata` function:
@@ -263,7 +257,7 @@ Here are a few examples:
 # Daily temperature in Ohio
 dataTemp <- readNWISdata(stateCd = "OH", 
                          parameterCd = "00010",
-                         service="dv") 
+                         service = "dv") 
 
 # Real-time discharge at a site
 instFlow <- readNWISdata(sites = "05114000",
@@ -274,13 +268,12 @@ instFlow <- readNWISdata(sites = "05114000",
                          tz = "America/Chicago") 
 
 # Temperature within a bounding box:
-bBoxEx <- readNWISdata(bBox = c(-83,36.5,-81,38.5),
+bBoxEx <- readNWISdata(bBox = c(-83, 36.5, -81, 38.5),
                        parameterCd = "00010")
 
 # Groundwater levels within a HUC:
-groundwaterHUC <- readNWISdata(huc="02070010",
-                               service="gwlevels")
-
+groundwaterHUC <- readNWISdata(huc = "02070010",
+                               service = "gwlevels")
 ```
   
 
@@ -293,20 +286,18 @@ AZ_sites <- whatNWISsites(stateCd = "AZ",
                 parameterCd = "00665")
 nrow(AZ_sites)
 names(AZ_sites)
-
 ```
 
 
 ```{r echo=FALSE, eval=TRUE, fig.height=4}
 library(leaflet)
 
-leaflet(data=AZ_sites) %>% 
+leaflet(data = AZ_sites) %>% 
   addProviderTiles("CartoDB.Positron") %>%
-  addCircleMarkers(~dec_long_va,~dec_lat_va,
-                   color = "red", radius=3, stroke=FALSE,
+  addCircleMarkers(~dec_long_va, ~dec_lat_va,
+                   color = "red", radius = 3, stroke = FALSE,
                    fillOpacity = 0.8, opacity = 0.8,
-                   popup=~station_nm)
-        
+                   popup = ~station_nm)
 ```
 
 Now let's see what we get back from the `whatNWISdata` function:
@@ -329,8 +320,7 @@ library(dplyr)
 AZdata2 <- AZ_data %>% 
   select(station_nm, begin_date, end_date, count_nu)
 
-datatable(AZdata2, rownames = FALSE,options = list(pageLength = 8))
-
+datatable(AZdata2, rownames = FALSE, options = list(pageLength = 8))
 ```
 
 
@@ -355,29 +345,24 @@ library(dplyr)
 phWI.1 <- phWI %>% 
   filter(count_nu > 300) %>%
   mutate(period = as.Date(end_date) - as.Date(begin_date)) %>%
-  filter(period > 15*365)
-
-
+  filter(period > 15 * 365)
 ```
 
 ```{r echo=TRUE, eval=FALSE}
 pCode <- c("00665")
-phWI <- whatNWISdata(stateCd="WI", 
-                     parameterCd=pCode)
+phWI <- whatNWISdata(stateCd = "WI", 
+                     parameterCd = pCode)
 
 library(dplyr)
 phWI.1 <- phWI %>% 
   filter(count_nu > 300) %>%
   mutate(period = as.Date(end_date) - as.Date(begin_date)) %>%
-  filter(period > 15*365)
-
-
+  filter(period > 15 * 365)
 ```
 
 ```{r }
 phos_WI_data <- readNWISqw(siteNumbers = phWI.1$site_no,
                            parameterCd = pCode)
-
 ```
 
 Let's look at the maximum measured value, and number of samples:
@@ -390,37 +375,41 @@ phos_summary <- phos_WI_data %>%
   ungroup() %>% 
   left_join(attr(phos_WI_data, "siteInfo"), 
             by = "site_no")
-
-
 ```
 
 Then map it:
 ```{r echo=FALSE, eval=TRUE, fig.height=4}
 library(leaflet)
 
-col_types <- c("darkblue","dodgerblue","green4",
-               "gold1","orange","brown","red")
-leg_vals <- unique(as.numeric(quantile(phos_summary$max, probs=c(0,0.01,0.1,0.25,0.5,0.75,0.9,.99,1), na.rm=TRUE)))
+col_types <- c("darkblue",
+               "dodgerblue",
+               "green4",
+               "gold1",
+               "orange",
+               "brown",
+               "red")
+leg_vals <- unique(as.numeric(quantile(phos_summary$max, 
+                  probs = c(0, 0.01, 0.1, 0.25, 0.5, 0.75, 0.9, .99, 1),
+                                       na.rm = TRUE)))
 
-pal = colorBin(col_types, phos_summary$max, bins = leg_vals)
-rad <-3*seq(1,4,length.out = 16)
-phos_summary$sizes <- rad[as.numeric(cut(phos_summary$count, breaks=16))]
+pal <- colorBin(col_types, phos_summary$max, bins = leg_vals)
+rad <- 3 * seq(1, 4, length.out = 16)
+phos_summary$sizes <- rad[as.numeric(cut(phos_summary$count, breaks = 16))]
           
-leaflet(data=phos_summary) %>% 
+leaflet(data = phos_summary) %>% 
   addProviderTiles("CartoDB.Positron") %>%
-  addCircleMarkers(~dec_long_va,~dec_lat_va,
+  addCircleMarkers(~dec_long_va, ~dec_lat_va,
                    fillColor = ~pal(max),
                    radius = ~sizes,
-                   fillOpacity = 0.8, opacity = 0.8,stroke=FALSE,
-                   popup=~station_nm) %>%
-  addLegend(position = 'bottomleft',
-            pal=pal,
-            values=~max,
+                   fillOpacity = 0.8, opacity = 0.8,
+                   stroke = FALSE,
+                   popup = ~station_nm) %>%
+  addLegend(position = "bottomleft",
+            pal = pal,
+            values = ~max,
             opacity = 0.8,
             labFormat = labelFormat(digits = 1),
-            title = 'Max Value')
-
-        
+            title = "Max Value")
 ```
 
  
@@ -444,11 +433,10 @@ nrow(nwisQW)
 
 <div style="float: right; width: 50%;">
 ```{r echo=TRUE, eval=TRUE}
-wqpQW <- readWQPqw(paste0("USGS-",phWI.1$site_no[1]),
+wqpQW <- readWQPqw(paste0("USGS-", phWI.1$site_no[1]),
                    parameterCd = "00665")
 ncol(wqpQW)
 nrow(wqpQW)
-
 ```
 </div>
 
@@ -459,10 +447,8 @@ The value of the Water Quality Portal is to explore water quality data from diff
 The following function returns sites that have collected phosphorus data in Wisconsin. There's no way to know if that site has collected one sample, or thousands. This function is pretty fast, but only reports which sites have data.
 
 ```{r echo=TRUE, eval=FALSE}
-
 phosSites <- whatWQPsites(statecode = "WI",
                           characteristicName = "Phosphorus")
-  
 ```
 
 Similar to NWIS, to find out the scope of the available data, there is a `whatWQPdata` function:
@@ -470,7 +456,6 @@ Similar to NWIS, to find out the scope of the available data, there is a `whatWQ
 ```{r echo=TRUE, eval=TRUE}
 phos_data_available <- whatWQPdata(statecode = "WI",
                                    characteristicName = "Phosphorus")
-
 ```
 
 This function comes back with a few really useful columns such as "activityCount" and "resultCount". As with our NWIS query, let's filter down our data request to sites that have only had more than 300 measurements.
@@ -481,14 +466,12 @@ phos_data_sites_to_get <- phos_data_available %>%
 
 phosData <- readWQPdata(siteNumbers = phos_data_sites_to_get$MonitoringLocationIdentifier,
                         characteristicName = "Phosphorus")
-
 ```
 
 With data coming from many different agencies, it will be important to carefully review the returned data. For instance, this "Phosphorus" data comes back with many different units. It will be important to make smart decisions on how and if the queried data can be used together.
 
 ```{r echo=TRUE, eval=FALSE}
 unique(phosData$ResultMeasure.MeasureUnitCode)
-  
 ```
 
 ```{r eval=TRUE}
@@ -505,9 +488,9 @@ siteInfo <- attr(phosData, "siteInfo")
 
 wiSummary <- phosData %>%
   filter(ResultMeasure.MeasureUnitCode %in% 
-           c("mg/l","mg/l as P")) %>%
+           c("mg/l", "mg/l as P")) %>%
   group_by(MonitoringLocationIdentifier) %>%
-  summarise(count=n(),
+  summarise(count = n(),
             max = max(ResultMeasureValue, na.rm = TRUE)) %>%
   left_join(siteInfo, by = "MonitoringLocationIdentifier")
 
@@ -515,26 +498,35 @@ wiSummary <- phosData %>%
 
 
 ```{r echo=FALSE, eval=TRUE}
-col_types <- c("darkblue","dodgerblue","green4","gold1","orange","brown","red")
-leg_vals <- unique(as.numeric(quantile(wiSummary$max, probs=c(0,0.01,0.1,0.25,0.5,0.75,0.9,.99,1), na.rm=TRUE)))
-pal = colorBin(col_types, wiSummary$max, bins = leg_vals)
-rad <-3*seq(1,4,length.out = 16)
-wiSummary$sizes <- rad[as.numeric(cut(wiSummary$count, breaks=16))]
+col_types <- c("darkblue",
+               "dodgerblue",
+               "green4",
+               "gold1",
+               "orange",
+               "brown",
+               "red")
+leg_vals <- unique(as.numeric(quantile(wiSummary$max, 
+                                       probs =
+                     c(0, 0.01, 0.1, 0.25, 0.5, 0.75, 0.9, .99, 1), 
+                                       na.rm = TRUE)))
+pal <- colorBin(col_types, wiSummary$max, bins = leg_vals)
+rad <- 3 * seq(1, 4, length.out = 16)
+wiSummary$sizes <- rad[as.numeric(cut(wiSummary$count, breaks = 16))]
           
-leaflet(data=wiSummary) %>% 
+leaflet(data = wiSummary) %>% 
   addProviderTiles("CartoDB.Positron") %>%
-  addCircleMarkers(~dec_lon_va,~dec_lat_va,
+  addCircleMarkers(~dec_lon_va, ~dec_lat_va,
                    fillColor = ~pal(max),
                    radius = ~sizes,
-                   fillOpacity = 0.8, opacity = 0.8,stroke=FALSE,
-                   popup=~station_nm) %>%
-  addLegend(position = 'bottomleft',
-            pal=pal,
-            values=~max,
+                   fillOpacity = 0.8, opacity = 0.8,
+                   stroke = FALSE,
+                   popup = ~station_nm) %>%
+  addLegend(position = "bottomleft",
+            pal = pal,
+            values = ~max,
             opacity = 0.8,
             labFormat = labelFormat(digits = 1), 
-            title = 'Max Value')
-
+            title = "Max Value")
 ```
 
 
